PIM-1571 Fixed metric attribute comparison alignement

--- a/src/Pim/Bundle/UIBundle/Resources/public/css/form.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/css/form.less
@@ -310,6 +310,9 @@ div.btn-group > .has-switch {
       }
       .controls {
         margin-left: 40px;
+        &.metric {
+          margin-left: 10px;
+        }
       }
     }
   }
